# simtrack

data/object_models/ikeaMug/: ikeaMug.mtl
interface/: CMakeLists.txt
interface/include/: multi_rigid_tracker.h  poses_on_icosahedron.h
interface/src/: cmd_line_optical_flow_simple.cpp  cmd_line_perturb_obj_pose_random.cpp  cmd_line_render_cam_poses.cpp  cmd_line_render_scene_simple.cpp  icosahedron.cpp  icosahedron_gen_notes.ipynb  multi_rigid_tracker.cpp
low_level_vision/: CMakeLists.txt
low_level_vision/include/: d_optical_and_ar_flow.h
low_level_vision/src/: d_optical_and_ar_flow.cpp  utility_kernels.cu
pose_estimation/: CMakeLists.txt
pose_estimation/include/: d_multiple_rigid_poses.h
pose_estimation/src/: d_multiple_rigid_poses.cpp  multiple_rigid_models_ogre.cpp
rendering/: CMakeLists.txt
rendering/include/: ogre_context.h
rendering/src/: ogre_multi_render_target.cpp  rigid_object.cpp
simtrack_nodes/: CMakeLists.txt
simtrack_nodes/config/: demo_objects.yaml  parameters.yaml
simtrack_nodes/include/simtrack_nodes/: multi_rigid_node.h  rotate_model_node.h
simtrack_nodes/launch/: multi-rigid.launch  rotate_model.launch
simtrack_nodes/src/: multi_rigid_node.cpp  rotate_model_main.cpp  rotate_model_node.cpp
tracking_data_generator/: CMakeLists.txt
utilities/: CMakeLists.txt
